feat: add the stores and categories containers

--- a/src/templates/website/base.html
+++ b/src/templates/website/base.html
@@ -37,7 +37,7 @@
     <!-- display messages -->
 
     <!-- content -->
-    <section style="min-height: 75vh;">
+    <section id="content-block" style="min-height: 75vh;">
         {% block content %}
         {% endblock %}
     </section>
