--- a/src/templates/website/sections/header.html
+++ b/src/templates/website/sections/header.html
@@ -19,7 +19,7 @@
             <ul class="navbar-nav ps-5 ms-5">
                 <!-- Home icon -->
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'home' %}">
+                    <a id="home-link" class="nav-link active" aria-current="page" href="{% url 'home' %}">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" height="20" width="20">
                             <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                             <path d="M575.8 255.5c0 18-15 32.1-32 32.1l-32 0 .7 160.2c0 2.7-.2 5.4-.5 8.1l0 16.2c0 22.1-17.9 40-40 40l-16 0c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1L416 512l-24 0c-22.1 0-40-17.9-40-40l0-24 0-64c0-17.7-14.3-32-32-32l-64 0c-17.7 0-32 14.3-32 32l0 64 0 24c0 22.1-17.9 40-40 40l-24 0-31.9 0c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2l-16 0c-22.1 0-40-17.9-40-40l0-112c0-.9 0-1.9 .1-2.8l0-69.7-32 0c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"></path>
@@ -28,19 +28,14 @@
                 </li>
                 <!-- Home icon -->
 
-                <li class="nav-item">
+                <li id="stores-link" class="nav-item">
                     <a class="nav-link" href="#">فروشگاه ها</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                       aria-expanded="false">
-                        دسته بندی ها
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
+                <li id="products-link" class="nav-item">
+                    <a class="nav-link" href="#">محصولات</a>
+                </li>
+                <li id="categories-link" class="nav-item">
+                    <a class="nav-link" href="#">دسته بندی ها</a>
                 </li>
             </ul>
             <!-- middle navbar -->
@@ -57,12 +52,15 @@
                                     aria-expanded="false">
                                 {% if request.user.image %}
                                     <img class="rounded-circle" src="{{ request.user.image.url }}" alt="photo"
+                                         height="25"
                                          width="25">
                                 {% else %}
                                     <img class="rounded-circle"
                                          src="{% static 'accounts/img/default_profile_photo.png' %}" alt="static"
+                                         height="25"
                                          width="25">
                                 {% endif %}
+                                {{ request.user }}
                             </button>
                             <ul class="dropdown-menu dropdown-menu-dark ">
 
