fix: Move `script.js` from `base.html` to the `index.html`

--- a/src/templates/website/index.html
+++ b/src/templates/website/index.html
@@ -74,4 +74,7 @@
         </div>
     </div>
 {% endblock %}
+{% block js %}
+    <script src="{% static 'website/js/script.js' %}"></script>
+{% endblock %}
 
