--- a/src/templates/website/sections/header.html
+++ b/src/templates/website/sections/header.html
@@ -29,7 +29,7 @@
                 <!-- Home icon -->
 
                 <li id="stores-link" class="nav-item">
-                    <a class="nav-link" href="#">فروشگاه ها</a>
+                    <a class="nav-link" href="{% url 'vendors:store_list' %}">فروشگاه ها</a>
                 </li>
                 <li id="products-link" class="nav-item">
                     <a class="nav-link" href="#">محصولات</a>
