feat: add search dependencies to the header.html and generic.js

--- a/src/templates/website/base.html
+++ b/src/templates/website/base.html
@@ -59,6 +59,8 @@
             crossorigin="anonymous">
     </script>
 
+    <script src="{% static 'website/js/generic.js' %}"></script>
+    
     <!-- Custom js -->
     {% block js %}
     {% endblock %}
