--- a/src/templates/website/sections/header.html
+++ b/src/templates/website/sections/header.html
@@ -10,8 +10,9 @@
 
             <!-- search -->
             <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success mx-3" type="submit">Search</button>
+                <input id="search-input" name="search" class="form-control me-2" type="search" placeholder="Search"
+                       aria-label="Search">
+                <button id="search-btn" class="btn btn-outline-success mx-3" type="button">Search</button>
             </form>
             <!-- search -->
 
