feat: add an order_number field to the `Order` model

--- a/src/templates/customers/dashboard/order_detail.html
+++ b/src/templates/customers/dashboard/order_detail.html
@@ -1,6 +1,6 @@
 {% load static  template_filters %}
 
-<h3 class="box-title mb-3">Order No. {{ order.id }}</h3>
+<h3 class="box-title mb-3">Order No. {{ order.order_number }}</h3>
 <table class="table table-striped align-middle justify-end">
     <caption dir="rtl">
     </caption>
