--- a/src/templates/customers/dashboard/order_list.html
+++ b/src/templates/customers/dashboard/order_list.html
@@ -14,7 +14,7 @@
         <tr>
             <th scope="row">{{ forloop.counter }}</th>
             <td>
-                {{ order.id }}
+                {{ order.order_number }}
             </td>
             <td>{{ order.created_at }}</td>
             <td>{{ order.total }}</td>
