--- a/src/templates/website/sections/header.html
+++ b/src/templates/website/sections/header.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="{% url 'vendors:store_list' %}">فروشگاه ها</a>
                 </li>
                 <li id="products-link" class="nav-item">
-                    <a class="nav-link" href="#">محصولات</a>
+                    <a class="nav-link" href="{% url 'products:store-product-list' %}">محصولات</a>
                 </li>
                 <li id="categories-link" class="nav-item">
                     <a class="nav-link" href="#">دسته بندی ها</a>
