feat: cart.js shows updates live

--- a/src/templates/orders/cart.html
+++ b/src/templates/orders/cart.html
@@ -130,25 +130,17 @@
                                     <tbody>
                                     <tr>
                                         <td>قیمت کالاها :</td>
-                                        <td class="text-end">$ 780</td>
+                                        <td class="text-end"><span id="goods-total-amount">0</span> تومان</td>
                                     </tr>
                                     <tr>
                                         <td>سود شما :</td>
-                                        <td class="discount text-end">- $ 78</td>
-                                    </tr>
-                                    <tr>
-                                        <td>هزینه ارسال</td>
-                                        <td class="text-end">0 تومان</td>
-                                    </tr>
-                                    <tr>
-                                        <td>مالیات بر ارزش افزوده :</td>
-                                        <td class="text-end">0 تومان</td>
+                                        <td class="discount text-end"><span id="profit-amount">0</span> تومان</td>
                                     </tr>
                                     <tr class="bg-light ">
                                         <th>جمع سبد خرید :</th>
                                         <td class="text-end">
                                             <span class="price fw-bold">
-                                                $ 745.2
+                                                <span id="final-amount">0</span> تومان
                                             </span>
                                         </td>
                                     </tr>
